@@ -1,156 +1,144 @@
 package com.churkovainteam.kghomework.objreader;
 
+import com.churkovainteam.kghomework.common.ObjToken;
 import com.churkovainteam.kghomework.math.Vector2f;
 import com.churkovainteam.kghomework.math.Vector3f;
 import com.churkovainteam.kghomework.model.Model;
 import com.churkovainteam.kghomework.model.Polygon;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Scanner;
 
 public class ObjReader {
 
-	private static final String OBJ_VERTEX_TOKEN = "v";
-	private static final String OBJ_TEXTURE_TOKEN = "vt";
-	private static final String OBJ_NORMAL_TOKEN = "vn";
-	private static final String OBJ_FACE_TOKEN = "f";
-
 	public static Model read(String fileContent) {
-		Model result = new Model();
-
-		int lineInd = 0;
 		Scanner scanner = new Scanner(fileContent);
+
+		Model model = new Model();
+
+		int fileLineId = 1;
 		while (scanner.hasNextLine()) {
-			final String line = scanner.nextLine();
-			ArrayList<String> wordsInLine = new ArrayList<String>(Arrays.asList(line.split("\\s+")));
+			String line = scanner.nextLine();
+			List<String> wordsInLine = new ArrayList<>(List.of(line.split("\\s+")));
 			if (wordsInLine.isEmpty()) {
 				continue;
 			}
 
-			final String token = wordsInLine.get(0);
-			wordsInLine.remove(0);
+			try {
+				ObjToken token = ObjToken.fromString(wordsInLine.get(0));
+				wordsInLine.remove(0);
 
-			++lineInd;
-			switch (token) {
-				// Для структур типа вершин методы написаны так, чтобы ничего не знать о внешней среде.
-				// Они принимают только то, что им нужно для работы, а возвращают только то, что могут создать.
-				// Исключение - индекс строки. Он прокидывается, чтобы выводить сообщение об ошибке.
-				// Могло быть иначе. Например, метод parseVertex мог вместо возвращения вершины принимать вектор вершин
-				// модели или сам класс модели, работать с ним.
-				// Но такой подход может привести к большему количеству ошибок в коде. Например, в нем что-то может
-				// тайно сделаться с классом модели.
-				// А еще это портит читаемость
-				// И не стоит забывать про тесты. Чем проще вам задать данные для теста, проверить, что метод рабочий,
-				// тем лучше.
-				case OBJ_VERTEX_TOKEN -> result.vertices.add(parseVertex(wordsInLine, lineInd));
-				case OBJ_TEXTURE_TOKEN -> result.textureVertices.add(parseTextureVertex(wordsInLine, lineInd));
-				case OBJ_NORMAL_TOKEN -> result.normals.add(parseNormal(wordsInLine, lineInd));
-				case OBJ_FACE_TOKEN -> result.polygons.add(parseFace(wordsInLine, lineInd));
-				default -> {}
+				switch (token) {
+					case VERTEX -> model.vertices.add(parseVertex(wordsInLine, fileLineId));
+					case TEXTURE -> model.textureVertices.add(parseTextureVertex(wordsInLine, fileLineId));
+					case NORMAL -> model.normals.add(parseNormal(wordsInLine, fileLineId));
+					case FACE -> model.polygons.add(parseFace(wordsInLine, fileLineId));
+				}
+			} catch (IllegalArgumentException e) {
+				throw new ObjReaderException(e.getMessage(), fileLineId);
 			}
+
+			fileLineId++;
 		}
 
-		return result;
+		return model;
 	}
 
-	// Всем методам кроме основного я поставил модификатор доступа protected, чтобы обращаться к ним в тестах
-	protected static Vector3f parseVertex(final ArrayList<String> wordsInLineWithoutToken, int lineInd) {
+	protected static Vector3f parseVertex(List<String> wordsInLineWithoutToken, int fileLineId) {
+		if (wordsInLineWithoutToken.size() != 3) {
+			throw new ObjReaderException("Error reading a vertex. Only x, y, z coordinates " +
+					"should be present in the description.", fileLineId);
+		}
+
 		try {
 			return new Vector3f(
 					Float.parseFloat(wordsInLineWithoutToken.get(0)),
 					Float.parseFloat(wordsInLineWithoutToken.get(1)),
 					Float.parseFloat(wordsInLineWithoutToken.get(2)));
-
 		} catch(NumberFormatException e) {
-			throw new ObjReaderException("Failed to parse float value.", lineInd);
-
-		} catch(IndexOutOfBoundsException e) {
-			throw new ObjReaderException("Too few vertex arguments.", lineInd);
+			throw new ObjReaderException("Failed to parse float value.", fileLineId);
 		}
 	}
 
-	protected static Vector2f parseTextureVertex(final ArrayList<String> wordsInLineWithoutToken, int lineInd) {
+	protected static Vector2f parseTextureVertex(List<String> wordsInLineWithoutToken, int fileLineId) {
+		if (wordsInLineWithoutToken.size() != 2) {
+			throw new ObjReaderException("Error reading texture vertex. Only u, v arguments should be present" +
+					"in the description.", fileLineId);
+		}
+
 		try {
 			return new Vector2f(
 					Float.parseFloat(wordsInLineWithoutToken.get(0)),
 					Float.parseFloat(wordsInLineWithoutToken.get(1)));
-
 		} catch(NumberFormatException e) {
-			throw new ObjReaderException("Failed to parse float value.", lineInd);
+			throw new ObjReaderException("Failed to parse float value.", fileLineId);
 
-		} catch(IndexOutOfBoundsException e) {
-			throw new ObjReaderException("Too few texture vertex arguments.", lineInd);
 		}
 	}
 
-	protected static Vector3f parseNormal(final ArrayList<String> wordsInLineWithoutToken, int lineInd) {
+	protected static Vector3f parseNormal(List<String> wordsInLineWithoutToken, int fileLineId) {
+		if (wordsInLineWithoutToken.size() != 3) {
+			throw new ObjReaderException("Error reading a normal. Only x, y, z coordinates " +
+					"should be present in the description.", fileLineId);
+		}
+
 		try {
 			return new Vector3f(
 					Float.parseFloat(wordsInLineWithoutToken.get(0)),
 					Float.parseFloat(wordsInLineWithoutToken.get(1)),
 					Float.parseFloat(wordsInLineWithoutToken.get(2)));
-
 		} catch(NumberFormatException e) {
-			throw new ObjReaderException("Failed to parse float value.", lineInd);
-
-		} catch(IndexOutOfBoundsException e) {
-			throw new ObjReaderException("Too few normal arguments.", lineInd);
+			throw new ObjReaderException("Failed to parse float value.", fileLineId);
 		}
 	}
 
-	protected static Polygon parseFace(final ArrayList<String> wordsInLineWithoutToken, int lineInd) {
-		ArrayList<Integer> onePolygonVertexIndices = new ArrayList<Integer>();
-		ArrayList<Integer> onePolygonTextureVertexIndices = new ArrayList<Integer>();
-		ArrayList<Integer> onePolygonNormalIndices = new ArrayList<Integer>();
+	protected static Polygon parseFace(List<String> wordsInLineWithoutToken, int fileLineId) {
+		List<Integer> polygonVertexIndices = new ArrayList<>();
+		List<Integer> polygonTextureVertexIndices = new ArrayList<>();
+		List<Integer> polygonNormalIndices = new ArrayList<>();
 
-		for (String s : wordsInLineWithoutToken) {
-			parseFaceWord(s, onePolygonVertexIndices, onePolygonTextureVertexIndices, onePolygonNormalIndices, lineInd);
+		for (String value : wordsInLineWithoutToken) {
+			parseFaceWord(value, polygonVertexIndices, polygonTextureVertexIndices, polygonNormalIndices, fileLineId);
 		}
 
-		Polygon result = new Polygon();
-		result.setVertexIndices(onePolygonVertexIndices);
-		result.setTextureVertexIndices(onePolygonTextureVertexIndices);
-		result.setNormalIndices(onePolygonNormalIndices);
-		return result;
+		Polygon polygon = new Polygon();
+		polygon.setVertexIndices(polygonVertexIndices);
+		polygon.setTextureVertexIndices(polygonTextureVertexIndices);
+		polygon.setNormalIndices(polygonNormalIndices);
+
+		return polygon;
 	}
 
-	// Обратите внимание, что для чтения полигонов я выделил еще один вспомогательный метод.
-	// Это бывает очень полезно и с точки зрения структурирования алгоритма в голове, и с точки зрения тестирования.
-	// В радикальных случаях не бойтесь выносить в отдельные методы и тестировать код из одной-двух строчек.
 	protected static void parseFaceWord(
 			String wordInLine,
-			ArrayList<Integer> onePolygonVertexIndices,
-			ArrayList<Integer> onePolygonTextureVertexIndices,
-			ArrayList<Integer> onePolygonNormalIndices,
-			int lineInd) {
+			List<Integer> polygonVertexIndices,
+			List<Integer> polygonTextureVertexIndices,
+			List<Integer> polygonNormalIndices,
+			int fileLineId) {
 		try {
 			String[] wordIndices = wordInLine.split("/");
 			switch (wordIndices.length) {
-				case 1 -> {
-					onePolygonVertexIndices.add(Integer.parseInt(wordIndices[0]) - 1);
-				}
+				case 1 -> polygonVertexIndices.add(Integer.parseInt(wordIndices[0]) - 1);
 				case 2 -> {
-					onePolygonVertexIndices.add(Integer.parseInt(wordIndices[0]) - 1);
-					onePolygonTextureVertexIndices.add(Integer.parseInt(wordIndices[1]) - 1);
+					polygonVertexIndices.add(Integer.parseInt(wordIndices[0]) - 1);
+					polygonTextureVertexIndices.add(Integer.parseInt(wordIndices[1]) - 1);
 				}
 				case 3 -> {
-					onePolygonVertexIndices.add(Integer.parseInt(wordIndices[0]) - 1);
-					onePolygonNormalIndices.add(Integer.parseInt(wordIndices[2]) - 1);
+					polygonVertexIndices.add(Integer.parseInt(wordIndices[0]) - 1);
+					polygonNormalIndices.add(Integer.parseInt(wordIndices[2]) - 1);
 					if (!wordIndices[1].equals("")) {
-						onePolygonTextureVertexIndices.add(Integer.parseInt(wordIndices[1]) - 1);
+						polygonTextureVertexIndices.add(Integer.parseInt(wordIndices[1]) - 1);
 					}
 				}
-				default -> {
-					throw new ObjReaderException("Invalid element size.", lineInd);
-				}
+				default -> throw new ObjReaderException("Invalid polygon vertex description.", fileLineId);
 			}
 
 		} catch(NumberFormatException e) {
-			throw new ObjReaderException("Failed to parse int value.", lineInd);
+			throw new ObjReaderException("Failed to parse int value.", fileLineId);
 
 		} catch(IndexOutOfBoundsException e) {
-			throw new ObjReaderException("Too few arguments.", lineInd);
+			throw new ObjReaderException("Invalid polygon description.", fileLineId);
 		}
 	}
 }
